# bachelor_thesis

./: .gitignore  README.md  pyproject.toml
py_scripts/data_retrieval/: data_frame_prep.py
py_scripts/diagnostics/: correlations.py  diagnostics-1.py  diagnostics-2.py  missing_esg_visual.py  variance.py
py_scripts/kalman/: imputation.py  param_tuning.py
py_scripts/processing/: column_removal.py  finalisation.py  general_cleaning.py  interpolation.py  seasonality.py  shit_filter.py
py_scripts/processing/PANIC/: panic.py
py_scripts/processing/declowning/: declowning_patterns.py  outliers.py  patterns.py
py_scripts/transformations/: calculations.py  calculations_2.py
r_scipts/: gmm_covid_shock.R  gmm_war_shock.R
src/: __init__.py
src/analysis/: __init__.py  correlations.py  diagnostics.py  variance_analysis.py
src/analysis/unit_root_tests/: __init__.py  bootstrap.py  decomposition.py  panel_diagnostics.py  panic_core.py
src/data_acquisition/: __init__.py  api_client.py  esg_data.py  etf_holdings.py  financial_data.py  profile_data.py
src/kalman/: __init__.py  imputation.py  parameter_tuning.py
src/preprocessing/: __init__.py  dummyfication.py  interpolation.py  zero_interpolation.py
src/preprocessing/cleaning/: __init__.py  column_management.py  data_filtering.py  date_processing.py  duplicates.py  missing_data.py  panel_validation.py
src/preprocessing/declowning/: __init__.py  outliers.py  patterns.py  shit_filter.py  utils.py
src/transformations/: __init__.py  calculations.py  seasonality.py
src/utils/: __init__.py  constants.py  data_validation.py  file_handlers.py  logging_helpers.py
