[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "work-in-progress"
version = "0.1.0"
description = "ESG and financial data analysis toolkit with advanced preprocessing and econometric modeling"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "kalqvam", email = "your.email@example.com"},
]
maintainers = [
    {name = "kalqvam", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
]
keywords = ["finance", "esg", "econometrics", "time-series", "panel-data"]
requires-python = ">=3.8"
dependencies = [
    # Core data science stack
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    
    # Time series and econometrics
    "statsmodels>=0.13.0",
    "linearmodels>=4.25",
    
    # Optimization and machine learning
    "optuna>=3.0.0",
    "scikit-learn>=1.0.0",
    
    # Visualization
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    
    # Data acquisition
    "requests>=2.25.0",
    
    # Progress bars and utilities
    "tqdm>=4.60.0",
    
    # Date/time handling
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=3.8",
    "mypy>=0.900",
    "pre-commit>=2.10",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.15",
]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=7.6.0",
]
r-integration = [
    "rpy2>=3.4.0",
]

[project.urls]
Homepage = "https://github.com/kalqvam/work-in-progress"
Repository = "https://github.com/kalqvam/work-in-progress"
Documentation = "https://github.com/kalqvam/work-in-progress#readme"
"Bug Tracker" = "https://github.com/kalqvam/work-in-progress/issues"

[project.scripts]
# Add command line scripts here if needed
# example-script = "src.module:main_function"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["py_scripts*", "src*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.json", "*.yaml", "*.yml"]

# Black code formatting
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort import sorting
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["py_scripts", "src"]

# pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Coverage configuration
[tool.coverage.run]
source = ["py_scripts", "src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# MyPy type checking
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true when adding type hints
disallow_incomplete_defs = false  # Set to true when adding type hints
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Ignore missing imports for packages that don't have type stubs
[[tool.mypy.overrides]]
module = [
    "optuna.*",
    "linearmodels.*",
    "statsmodels.*",
    "scipy.*",
    "matplotlib.*",
    "seaborn.*",
    "tqdm.*",
]
ignore_missing_imports = true
